[package]
authors = ["Ingmar Jager <ijager@jitter.company>"]
edition = "2018"
readme = "README.md"
name = "stm32wle-pac-blinky"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
panic-halt = "0.2.0"

[dependencies.stm32wl]
features = ["stm32wle5", "rt"]
version = "0.12.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32wle-pac-blinky"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
